fix: :lipstick: Fix size and position of the image after changing assets on mobile and desktop

--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -742,16 +742,14 @@
     }
 
     .patient__case {
+        .grid_header {
+            padding-right: 35px;
+        }
+
         &#patient-id-5 {
-            .grid_header {
-                height: 200px;
-            }
 
             .profile__pic {
-                left: -10px;
-                top: -35px;
-                width: 195px;
-                height: 275px;
+                top: -25px;
             }
 
             .accordion__item {
@@ -1001,15 +999,7 @@
     #case-betty-65 {
         .patient__info_grid_photo {
             img {
-                top: -40px;
-                width: 291px;
-                height: 300px;
-
-                @media screen and (min-width: 1200px) {
-                    top: -50px;
-                    width: 291px;
-                    height: 387px;
-                }
+                width: 90%;
             }
         }
 
